fixes info-table-row label truncation

--- a/ui/app/styles/core/label.scss
+++ b/ui/app/styles/core/label.scss
@@ -12,6 +12,8 @@
   display: flex;
   align-items: center;
   gap: $spacing-xxs;
+  width: min-content;
+  min-width: 100%;
 
   &:not(:last-child) {
     margin-bottom: 0.25rem;
